# polydatum

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.rst  DEVELOPMENT.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.rst  _README.rst  build-requirements.txt  make.sh  pyproject.toml  setup.py
.github/workflows/: python.yaml
polydatum/: __init__.py  config.py  context.py  dal.py  errors.py  middleware.py  resources.py  services.py  util.py
src/polydatum/: __init__.py  config.py  context.py  dal.py  errors.py  globals.py  middleware.py  request.py  resources.py  services.py  util.py
src/tests/: test_context.py  test_dal.py  test_deferred_attr_requests.py  test_middleware.py  test_path_segment.py  test_polydatum.py  test_replace.py  test_resolver_middleware.py  test_resources.py  test_services.py
tests/: conftest.py  test_context.py  test_dal.py  test_deferred_attr_requests.py  test_method_middleware.py  test_middleware.py  test_path_segment.py  test_replace.py  test_resolver_middleware.py  test_resources.py  test_services.py
